styles/styles.css
body {
  background-color: #ddddff;
  font-family: Palatino,Palatino Linotype,Palatino LT STD,Book Antiqua,Georgia,serif;
}
.section {
  background-color: #eeeeff;
  border-radius: 4px;
  padding: 4px;
  margin-top: 8px;
  margin-bottom: 8px;
}
.subsection {
  border-radius: 4px;
  padding: 4px;
  margin-top: 8px;
  margin-bottom: 8px;
}
.definition {
  border: 1px solid green;
}
.example {
  border: 1px solid black;
}
.code {
  white-space: pre-wrap;
  font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
  font-size: 14px;
}
table {
  text-align: left;
}
table.comparisontable {
  border: 1px solid black;
  border-radius: 4px;
}
table.comparisontable td {
  border: 1px solid #888888;
}
table.parsetable {
  border: 1px solid black;
}
table.parsetable td {
  border: 1px solid #888888;
}
table.parsetable tr:first-child {
  font-weight: bold;
}
table.parsetable td:first-child {
  font-weight: bold;
}
table.stackorqueue {
  border: 1px solid black;
}
table.stackorqueue td {
  border: 1px solid #888888;
}
table.parsetrace {
  border: 1px solid #888888;
  border-radius: 4px;
}
table.parsetrace td {
  border: 1px solid #BBBBBB;
}

